--- a/build.gradle
+++ b/build.gradle
@@ -27,7 +27,7 @@ configurations {
 	all*.exclude module : 'spring-boot-starter-logging'
 }
 dependencies {
-	implementation 'org.example:berlin-auslaenderbehorde-termin-bot:dev'
+	implementation 'org.example:berlin-auslaenderbehorde-termin-bot:1.0-SNAPSHOT'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation ('org.springframework.boot:spring-boot-starter-log4j2') {
 		exclude group: 'org.springframework.boot', module: 'spring-boot-starter-logging'
