--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,9 @@
 plugins {
-	id 'java'
-	id('application')
-	id 'org.springframework.boot' version '3.0.4'
-	id 'io.spring.dependency-management' version '1.1.0'
-	id("com.github.johnrengelman.shadow") version "6.0.0"
+    id 'java'
+    id('application')
+    id 'org.springframework.boot' version '3.0.4'
+    id 'io.spring.dependency-management' version '1.1.0'
+    id("com.github.johnrengelman.shadow") version "6.0.0"
 }
 
 sourceCompatibility = '17'
@@ -12,30 +12,30 @@ version '1.0-SNAPSHOT'
 mainClassName = 'org.example.Main'
 
 repositories {
-	mavenLocal()
-	mavenCentral()
-	maven {
-		url 'https://yilmaznaslan-250602908823.d.codeartifact.eu-central-1.amazonaws.com/maven/berlin-auslaenderbehorde-termin-bot/'
-		credentials {
-			username "aws"
-			password System.env.CODEARTIFACT_AUTH_TOKEN
-		}
-	}
+    mavenLocal()
+    mavenCentral()
+    maven {
+        url 'https://yilmaznaslan-250602908823.d.codeartifact.eu-central-1.amazonaws.com/maven/berlin-auslaenderbehorde-termin-bot/'
+        credentials {
+            username "aws"
+            password System.env.CODEARTIFACT_AUTH_TOKEN
+        }
+    }
 
 }
 configurations {
-	all*.exclude module : 'spring-boot-starter-logging'
+    all*.exclude module: 'spring-boot-starter-logging'
 }
-dependencies {
-	implementation 'org.example:berlin-auslaenderbehorde-termin-bot:1.0-SNAPSHOT'
-	implementation 'org.springframework.boot:spring-boot-starter-web'
-	implementation ('org.springframework.boot:spring-boot-starter-log4j2') {
-		exclude group: 'org.springframework.boot', module: 'spring-boot-starter-logging'
-	}
-	implementation 'org.springframework.boot:spring-boot-starter-log4j2:1.2.0.RELEASE'
 
+dependencies {
+    implementation('org.example:berlin-auslaenderbehorde-termin-bot:1.0-SNAPSHOT') {
+        exclude group: 'org.apache.logging.log4j', module: 'log4j-slf4j2.impl'
+    }
+    implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.boot:spring-boot-starter-log4j2'
 }
+
 
 tasks.named('test') {
-	useJUnitPlatform()
+    useJUnitPlatform()
 }
