--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,25 @@
+# Server Properties
+server.port=8080
+server.servlet.context-path=/api
 
+# Spring MVC Properties
+spring.mvc.view.prefix=/WEB-INF/jsp/
+spring.mvc.view.suffix=.jsp
+
+# Spring Datasource (Database) Properties
+spring.datasource.url=jdbc:mysql://localhost:3306/mydb
+spring.datasource.username=root
+spring.datasource.password=root
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# Hibernate Properties
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
+spring.jpa.hibernate.ddl-auto = update
+
+# Logging Level
+logging.level.org.springframework.web=INFO
+logging.level.org.hibernate=ERROR
+
+
+
+logging.level.root=INFO
