--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 # Server Properties
 server.port=8080
-server.servlet.context-path=/api
+#server.servlet.context-path=/api
 
 # Spring MVC Properties
 spring.mvc.view.prefix=/WEB-INF/jsp/
